--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:seed": "ts-node --project tsconfig.json --esm prisma/seed.ts",
+    "db:seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -30,12 +30,13 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.4.5"
   },
   "engines": {
     "node": ">=20"
   },
   "prisma": {
-    "seed": "ts-node --project tsconfig.json --esm prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   }
 }
